--- a/Avalonia.Tiels/Pages/Management/TileManagementPage.axaml
+++ b/Avalonia.Tiels/Pages/Management/TileManagementPage.axaml
@@ -15,21 +15,21 @@
 			<Button Grid.Column="1" Click="ApplyButtonClicked" x:Name="ApplyButton" Margin="5,0,0,0" Content="{x:Static p:Resources.Apply}"/>
 			<Button Grid.Column="0" Click="DefaultButtonClicked" x:Name="DefaultButton" Content="{x:Static p:Resources.Default}"/>
 		</Grid>
-		<StackPanel Margin="10">
+		<StackPanel Margin="10" Spacing="10">
 			<TextBlock FontSize="16" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SnappingLabel}"/>
-			<WrapPanel Margin="0,10">
+			<WrapPanel>
 				<StackPanel>
 					<Label Content="{x:Static p:Resources.Snapping}"/>
 					<TextBox x:Name="SnappingBox" Width="160" HorizontalAlignment="Left"/>
 				</StackPanel>
-				<StackPanel Margin="10,0,0,0">
+				<StackPanel>
 					<Label Content="{x:Static p:Resources.HandleSize}"/>
 					<TextBox x:Name="HandleSizeBox" Width="240" HorizontalAlignment="Left"/>
 				</StackPanel>
 			</WrapPanel>
 			<CheckBox x:Name="HideTileButtonsCheckBox" Content="{x:Static p:Resources.HideTileButtons}"/>
 			<!-- Tile list -->
-			<TextBlock FontSize="16" Margin="0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.TileListLabel}"/>
+			<TextBlock FontSize="16" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.TileListLabel}"/>
 			<StackPanel>
 				<Grid Height="32" Background="#E0F5FF">
 					<Grid.Styles>
