--- a/Avalonia.Tiels/Pages/Settings/ExperimentalPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/ExperimentalPage.axaml
@@ -6,12 +6,16 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Settings.ExperimentalPage">
 	<Grid>
-		<StackPanel Margin="10">
-			<TextBlock>Experimental Features</TextBlock>
-			<TextBlock>These features are not yet fully tested or compatible with all platforms.</TextBlock>
-			<CheckBox x:Name="ExEnableThumbnailsCategoryCheckBox" Content="{x:Static p:Resources.ExEnableThumbnailsCategory}"/>
-			<CheckBox x:Name="ExEnableWin32HooksCheckBox" Content="{x:Static p:Resources.ExEnableWin32Hooks}"/>
-			<CheckBox Margin="28,0,0,0" x:Name="ExDisableWin32MinimumHeightCheckBox" Content="{x:Static p:Resources.ExDisableWin32MinimumHeight}"/>
+		<StackPanel Margin="10" Spacing="10">
+			<StackPanel>
+				<TextBlock>Experimental Features</TextBlock>
+				<TextBlock>These features are not yet fully tested or compatible with all platforms.</TextBlock>
+			</StackPanel>
+			<StackPanel>
+				<CheckBox x:Name="ExEnableThumbnailsCategoryCheckBox" Content="{x:Static p:Resources.ExEnableThumbnailsCategory}"/>
+				<CheckBox x:Name="ExEnableWin32HooksCheckBox" Content="{x:Static p:Resources.ExEnableWin32Hooks}"/>
+				<CheckBox Margin="28,0,0,0" x:Name="ExDisableWin32MinimumHeightCheckBox" Content="{x:Static p:Resources.ExDisableWin32MinimumHeight}"/>
+			</StackPanel>
 		</StackPanel>
 	</Grid>
 </UserControl>
