--- a/Avalonia.Tiels/Pages/Settings/ThumbnailsPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/ThumbnailsPage.axaml
@@ -2,12 +2,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Settings.ThumbnailsPage">
 	<Grid>
 		<StackPanel Margin="10">
 			<TextBlock>No thumbnails settings</TextBlock>
 		</StackPanel>
+		<WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15">
+			<TextBlock x:Name="StatusIcon" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Padding="0,0,5,0">󿚚</TextBlock>
+			<TextBlock x:Name="StatusText" Text="{x:Static p:Resources.NoChanges}"/>
+		</WrapPanel>
 	</Grid>
     
 </UserControl>
