Fix entry name display by cutting it when it is too large

--- a/Avalonia.Tiels/Controls/EntryComponent.axaml
+++ b/Avalonia.Tiels/Controls/EntryComponent.axaml
@@ -5,7 +5,12 @@
              xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.EntryComponent">
-	<Button DataContext="{Binding RelativeSource={RelativeSource Self}}" HorizontalAlignment="Stretch" Background="Transparent" Click="EntryClicked">
+	<Button DataContext="{Binding RelativeSource={RelativeSource Self}}"
+	        HorizontalAlignment="Stretch"
+	        Background="Transparent"
+	        Click="EntryClicked"
+	        ToolTip.Tip="{Binding EntryName, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}">
+		
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*"/> <!-- Preview (Thumbnail) -->
@@ -14,7 +19,7 @@
 			<Image Grid.Row="0" Width="48" Height="48" HorizontalAlignment="Center"
 			       Source="{Binding Preview, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
 			<TextBlock Grid.Row="1" Initialized="TextBlockInitialized" x:Name="FileNameTextBlock"
-			           VerticalAlignment="Bottom" TextAlignment="Center" Text="{Binding EntryName, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
+			           VerticalAlignment="Bottom" TextAlignment="Center" Text="{Binding EntryNameShort, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
 			<TextBlock Grid.Row="0" Initialized="AttributeIconInitialized" x:Name="FileAttributeIcon"
 			           FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Foreground="#0068FF" VerticalAlignment="Bottom" HorizontalAlignment="Right" Padding="10,0" FontSize="16">󿚦</TextBlock>
 		</Grid>
