Add live scroll-loading

--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -43,8 +43,8 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="28"></RowDefinition>
             </Grid.RowDefinitions>
-            <ScrollViewer>
-                <WrapPanel x:Name="EntryContent">
+            <ScrollViewer x:Name="EntryScrollView" ScrollChanged="ScrollEntryLoad">
+                <WrapPanel x:Name="EntryContent" Background="#00FF00" VerticalAlignment="Top">
                 </WrapPanel>
             </ScrollViewer>
             <Grid Grid.Row="1" x:Name="EditBar">
@@ -86,5 +86,6 @@
                 <TextBlock x:Name="MoveAreaText" Text="{x:Static p:Resources.MoveWindow}" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </Grid>
         </Grid>
+        <TextBlock x:Name="Test__Item"/>
     </Grid>
 </Window>
