Revert thumbnail grid

--- a/Avalonia.Tiels/Pages/Settings/ThumbnailsPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/ThumbnailsPage.axaml
@@ -10,7 +10,13 @@
 			<Border BorderBrush="#FF0000" BorderThickness="1" CornerRadius="5">
 				<ScrollViewer MinHeight="120">
 					<StackPanel Margin="10" Height="120" Spacing="10" Orientation="Horizontal">
-						<controls:PreviewSelect/>
+						<Grid Width="120" Background="#22000000">
+							<Grid.RowDefinitions>
+								<RowDefinition Height="*"/>
+								<RowDefinition Height="20"/>
+							</Grid.RowDefinitions>
+							<TextBlock Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Test 1"/>
+						</Grid>
 					</StackPanel>
 				</ScrollViewer>
 			</Border>
