--- a/Avalonia.Tiels/App.axaml
+++ b/Avalonia.Tiels/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Avalonia.Tiels.App">
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <FluentTheme Mode="Dark"/>
         <Style Selector="Button.link">
             <Setter Property="Foreground" Value="Blue" />
             <Setter Property="Padding" Value="0" />
@@ -25,10 +25,10 @@
         </Style>
     </Application.Styles>
     <Application.Resources>
-        <Color x:Key="BaseBorderColor">#CFCFCF</Color>
-        <Color x:Key="BaseCategoryBorderColor">#25000000</Color>
-        <Color x:Key="BaseTitleColor">#666666</Color>
-        <Color x:Key="BaseCategoryColor">#000000</Color>
+        <Color x:Key="BaseBorderColor">#2A2A2A</Color>
+        <Color x:Key="BaseCategoryBorderColor">#20FFFFFF</Color>
+        <Color x:Key="BaseTitleColor">#AAAAAA</Color>
+        <Color x:Key="BaseCategoryColor">#FFFFFF</Color>
     </Application.Resources>
     <TrayIcon.Icons>
         <TrayIcons>
