--- a/Avalonia.Tiels/Pages/Settings/AppearancePage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/AppearancePage.axaml
@@ -22,6 +22,13 @@
                 <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Content="󿚙" Padding="2,5,0,0"><ToolTip.Tip>
                     <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
                 </ToolTip.Tip></Label></WrapPanel>
+                <ComboBox x:Name="ApplicationThemeBox" HorizontalAlignment="Stretch"/>
+            </StackPanel>
+            <TextBlock FontSize="16" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SettingsLabel}"/>
+            <StackPanel>
+                <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Content="󿚙" Padding="2,5,0,0"><ToolTip.Tip>
+                    <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
+                </ToolTip.Tip></Label></WrapPanel>
                 <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
             </StackPanel>
             <StackPanel>
