--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -20,32 +20,6 @@
             <TextBox x:Name="SizeXBox" Watermark="???" Margin="0,0,10,0"/>
             <TextBox x:Name="SizeYBox" Watermark="???"/>
         </WrapPanel>
-        <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
-        <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
-            <StackPanel>
-                <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Content="󿚙" Padding="2,5,0,0"><ToolTip.Tip>
-                    <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
-                </ToolTip.Tip></Label></WrapPanel>
-                <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
-            </StackPanel>
-            <Grid Margin="0,5,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0">
-                    <Label Content="{x:Static p:Resources.Color}"/>
-                    <colorpicker:ColorButton x:Name="ColorBtn" Color="#88000000" Margin="0,3,10,0"/>
-                </StackPanel>
-                <StackPanel Grid.Column="1">
-                    <Label Content="{x:Static p:Resources.TransparencyMode}"/>
-                    <ComboBox x:Name="TransparencyModeBox" HorizontalAlignment="Stretch"/>
-                </StackPanel>
-            </Grid>
-        </StackPanel>
-        <TextBlock Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False" x:Name="WarnUnsupportedOptionText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnPossiblyUnsupported}"/>
-        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="NewestWinOnlyText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnNewerSysReq}"/>
-        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="WarnOtherProgramsText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnOtherPrograms}"/>
-        <TextBlock FontStyle="Italic" Foreground="#666666" Margin="0,5,0,0" Text="{x:Static p:Resources.TransparencyChangedInColor}"/>
+        <controls:AppearanceComponent x:Name="Appearance"/>
     </StackPanel>
 </UserControl>
